--- a/APP/res/values/styles.xml
+++ b/APP/res/values/styles.xml
@@ -1,12 +1,15 @@
 <resources>
 
-    <color name="light_red">#f4364c</color>
-    <color name="comp_orange">#f47f35</color>
-    <color name="comp_purple">#f435aa</color>
-    <color name="tri_green">#4bf435</color>
-    <color name="tri_blue">#354bf4</color>
-    <color name="gray_40">#666666</color>
-    <color name="dark_black">#000000</color>
+    <color name="my_red">#f4364c</color>
+    <color name="dark_red">#890716</color>
+    <color name="light_red">#fbc7cd</color>
+    <color name="comp_orange">#f45f36</color>
+    <color name="comp_light_blue">#36f4de</color>
+    <color name="tri_green">#4bf436</color>
+    <color name="tri_blue">#364bf4</color>
+    <color name="my_gray">#959595</color>
+    <color name="my_black">#000000</color>
+    <color name="my_white">#ffffff</color>
     
     <!--
         Base application theme, dependent on API level. This theme is replaced
